--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@mantine/form": "^6.0.15",
     "@mantine/hooks": "6.0.2",
     "@mantine/next": "6.0.2",
-    "@mantine/notifications": "6.0.2",
+    "@mantine/notifications": "^6.0.15",
     "@mantine/prism": "6.0.2",
     "@next/bundle-analyzer": "^13.1.6",
     "@tabler/icons": "^1.107.0",
