--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dayjs": "^1.11.6",
     "embla-carousel-react": "^7.0.3",
     "next": "13.2.4",
+    "next-cloudinary": "^4.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1"
