--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "typecheck": "tsc --noEmit",
     "export": "next build && next export",
     "lint": "next lint",
-    "jest": "jest",
-    "jest:watch": "jest --watch",
     "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
     "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
-    "test": "npm run prettier:check && npm run lint && npm run typecheck && npm run jest",
+    "test": "npm run prettier:check && npm run lint && npm run typecheck",
     "storybook": "start-storybook -p 7001",
     "storybook:build": "build-storybook"
   },
@@ -47,10 +45,8 @@
     "@next/eslint-plugin-next": "^12.1.4",
     "@storybook/react": "^6.5.13",
     "@testing-library/dom": "^8.12.0",
-    "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^14.0.4",
-    "@types/jest": "^27.4.1",
     "@types/node": "^18.11.4",
     "@types/react": "18.0.21",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
@@ -61,17 +57,14 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-mantine": "2.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.5.7",
     "eslint-plugin-testing-library": "^5.2.0",
-    "jest": "^27.5.1",
     "prettier": "^2.7.1",
     "storybook-addon-turbo-build": "^1.1.0",
     "storybook-dark-mode": "^1.1.2",
-    "ts-jest": "^27.1.4",
     "typescript": "4.8.4"
   }
 }
