--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "lint": "next lint",
     "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
     "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
-    "test": "npm run prettier:check && npm run lint && npm run typecheck",
-    "storybook": "start-storybook -p 7001",
-    "storybook:build": "build-storybook"
+    "test": "npm run prettier:check && npm run lint && npm run typecheck"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -43,7 +41,6 @@
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@next/eslint-plugin-next": "^12.1.4",
-    "@storybook/react": "^6.5.13",
     "@testing-library/dom": "^8.12.0",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^14.0.4",
@@ -60,11 +57,8 @@
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.5.7",
     "eslint-plugin-testing-library": "^5.2.0",
     "prettier": "^2.7.1",
-    "storybook-addon-turbo-build": "^1.1.0",
-    "storybook-dark-mode": "^1.1.2",
     "typescript": "4.8.4"
   }
 }
