--- a/package.json
+++ b/package.json
@@ -17,21 +17,12 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
-    "@mantine/carousel": "6.0.2",
-    "@mantine/core": "6.0.2",
-    "@mantine/dates": "6.0.2",
-    "@mantine/ds": "^6.0.14",
-    "@mantine/form": "^6.0.15",
-    "@mantine/hooks": "6.0.2",
+    "@mantine/core": "^6.0.15",
+    "@mantine/hooks": "^6.0.15",
     "@mantine/next": "6.0.2",
     "@mantine/notifications": "^6.0.15",
-    "@mantine/prism": "6.0.2",
+    "@mantine/utils": "6.0.2",
     "@next/bundle-analyzer": "^13.1.6",
-    "@tabler/icons": "^1.107.0",
-    "@tabler/icons-react": "^2.4.0",
-    "cookies-next": "^2.1.1",
-    "dayjs": "^1.11.6",
-    "embla-carousel-react": "^7.0.3",
     "next": "13.2.4",
     "next-cloudinary": "^4.13.0",
     "react": "18.2.0",
